--- a/homepage/history.html
+++ b/homepage/history.html
@@ -5,6 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
+        <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Little Mix | Not Official</title>
     </head>
     <body>
@@ -15,17 +16,30 @@
                     <button class="btn-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
                         <img src="button.png">
                     </button>
-
                 </div>
 
-
-                <h1>2011</h1>
-                <img src="H-1.png" alt="H-1 Background">
+                <h2>- 2011 -</h2>
+                <img id="img1" src="history/H-1.png">
                 <h5>In 2011, Perrie Edwards, Jade Thirlwall, Leigh-Anne Pinnock, and Jesy Nelson individually auditioned successfully as soloists for the eighth series of the UK version of The X Factor.</h5>
+                <img id="img2" src="history/H-2.jpg">
+                <h5>The group formed on the show under the name Rhythmix on the 19th August 2011. Later they change their name to Little Mix.</h5>
+                <img id="img3" src="history/H-3.jpg">
+                <h5>Little Mix become the first girlband to win the X Factor.</h5>
 
-                <img src="H-2.jpg" alt="H-1 Background">
-                <h5>The group formed on the show under the name Rhythmix on the 19th August 2011</h5>
+                <h2>- 2012 -</h2>
+                <img id="img4" src="history/H-4.jpg">
+                <h5>After successfully winning the X Factor and becoming the first and only group to do so, Little Mix embark on the start of their careers with debut album 'DNA' in 2012.</h5>
 
+                <h2>- 2013 -</h2>
+                <img id="img5" src="history/H-5.jpg">
+                <h5>Little Mix's debut headline tour, the 'DNA Tour', kick off in Rhyl, Wales.</h5>
+
+                <img id="img6" src="history/H-6.png">
+                <h5>After a successful debut Little Mix continue to expand their takeover with second studio album 'Salute' in 2013.</h5>
+
+                <h2>- 2014 -</h2>
+                <img id="img7" src="history/H-7.jpg">
+                <h5>Little Mix start their second headline tour 'The Salute Tour' which is kicked off in the UK</h5>
 
                 <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
                     <div class="offcanvas-header">
@@ -46,14 +60,12 @@
                                 <a class="nav-link text-dark" href="photos.html">Photos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="sign_in.html" role="button">News</a>
+                                <a class="nav-link text-dark" href="newsletter.html" role="button">Newsletter</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <p>© 2022 SONY MUSIC ENTERTAINMENT UK LTD. | PRIVACY & COOKIE POLICY</p>
             </div>
-
         </div>
     </body>
 </html>
