--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,6 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
+        <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Little Mix | Not Official</title>
     </head>
     <body>
@@ -34,7 +35,7 @@
                                 <a class="nav-link text-dark" href="photos.html">Photos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="sign_in.html" role="button">News</a>
+                                <a class="nav-link text-dark" href="newsletter.html" role="button">Newsletter</a>
                             </li>
                         </ul>
 
@@ -42,10 +43,19 @@
                 </div>
             </div>
             <div class="text-center">
-                <h1 class="display-1">Between Us - Out Now!</h1>
-                <p>
-                    © 2022 SONY MUSIC ENTERTAINMENT UK LTD. | PRIVACY & COOKIE POLICY
-                </p>
+                <h1 class="display-1">Between Us - Out In:
+                    <script>
+                        var initTime = new Date();
+                        var i = 0;
+                        function countdown() {
+                            i++;
+                            var newTime = new Date(initTime.getTime() - i * 1000);
+                            document.getElementById("demo").innerHTML = newTime.toLocaleTimeString();
+                        }
+                        var myVar = setInterval(countdown, 1000);
+                    </script>
+                    <div id="demo"></div>
+                </h1>
             </div>
         </div>
     </body>
